--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongodb": "^6.19.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3"
   },
