--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "multer": "^2.0.2",
-    "mysql2": "^3.14.3"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
